# InventoryManagementSystem

./: .flake8  .gitignore  BIN_MIGRATION_SUMMARY.md  CLEANUP_SUMMARY.md  Dockerfile  LOCATION_CODE_FORMAT_CHANGE.md  LOCATION_HIERARCHY_GUIDE.md  README.md  REFACTORING_PLAN.md  SETUP_GUIDE.md  STOCK_FUNCTIONALITY_FIX_SUMMARY.md  WAREHOUSE_DELETION_LOGIC_SUMMARY.md  WAREHOUSE_PAGE_SIMPLIFICATION_SUMMARY.md  check_admin_password.py  check_all_schemas.py  check_data_structure.py  check_location_codes.py  check_tables.py  check_users.py  clear_cache.py  create_default_user.py  current_database_schema.md  debug_bin_counting.py  debug_config.py  debug_product.py  debug_product_simple.py  debug_products.py  directory_structure.md.txt  docker-compose.prod.yml  docker-compose.yml  env.template  main.py  populate_sample_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  run_app.bat  (+23 more)
.github/workflows/: ci-cd.yml
Refrences/labapp_templates/: activity_logs.html  add_row.html  add_user.html  admin_schema.html  alert.html  base.html  delete_row.html  edit_row_modal.html  (+6 more)
backend/: app.py  app_old.py  exceptions.py  security_config.py  validate_config.py
db/: SCHEMA.txt  migration_batch_tracking.sql  migration_forecasting.sql  migration_hierarchical_locations.sql  migration_hierarchical_locations_final.sql  migration_hierarchical_locations_fixed.sql  migration_hierarchical_locations_simple.sql  migration_hierarchical_locations_simple_fixed.sql  migration_new_schema.sql  migration_remove_hybrid.sql  migration_step_by_step.sql  migration_stock_to_bins.sql  migration_stock_to_bins_simple.sql  migration_transactions.sql  postgrest.conf  rollback_new_schema.sql  sample_data.sql  schema.sql  simple_migration.sql  simple_sample_data.sql
desktop/: main.py
docs/: DEPLOYMENT.md  README.md  openapi.yaml
markdown/: AUTHENTICATION_ANALYSIS.md  BIN_CODES_HIERARCHICAL_VIEW_ENHANCEMENT.md  BIN_COUNTING_FIX_SUMMARY.md  CODEBASE_ANALYSIS.md  CODE_STRUCTURES.md  CODING_STANDARDS.md  CONFIGURATION_README.md  DASHBOARD_UPGRADE_SUMMARY.md  DATABASE_SCHEMA_ANALYSIS.md  DATETIME_COMPARISON_ISSUES_AUDIT.md  DUPLICATE_ROUTE_FIX.md  HIERARCHICAL_STRUCTURE_IMPLEMENTATION_SUMMARY.md  HIERARCHICAL_VIEW_COMPLETE_ENHANCEMENT_SUMMARY.md  HIERARCHICAL_VIEW_LAYOUT_ENHANCEMENT.md  HIERARCHICAL_VIEW_MULTI_WAREHOUSE_FIX_SUMMARY.md  NAVIGATION_FIX_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_1_SUMMARY.md  PHASE2_2_SUMMARY.md  PHASE2_3_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  POSTGRESQL_SETUP.md  PRODUCTS_PAGE_CRITICAL_ISSUES_FIXED.md  PRODUCT_DETAILS_404_FIX.md  PRODUCT_DETAILS_DATA_LOADING_FIX.md  PRODUCT_DETAILS_DATETIME_ERROR_FIX_SUMMARY.md  PRODUCT_DETAILS_MODAL_FIX.md  PRODUCT_DETAILS_SPECIFIC_PRODUCT_DEBUG.md  REFACTORING_PROGRESS.md  SCANNER_FEATURES.md  SCANNER_MOVE_FIXES_SUMMARY.md  SCANNER_MOVE_FUNCTIONALITY_ENHANCEMENT.md  SCHEMA_MIGRATION_PLAN.md  SIDEBAR_CLEANUP_AND_SCHEMA_FIX_SUMMARY.md  STOCK_FUNCTIONALITY_FIX_SUMMARY.md  TRANSACTIONS_PAGE_RESTORATION.md  (+6 more)
monitoring/: prometheus.yml
scripts/: deploy.sh
tests/: __init__.py  conftest.py  test_models.py  test_routes.py  test_services.py
(+99 files in other folders)
